Arrow next to the date

--- a/index.html
+++ b/index.html
@@ -120,6 +120,22 @@
             <p id="menuTabName"></p>
             <p id="menuTabContent"></p>
         </div>
+        <div class="changeInMenu">
+            <a href="#" id="rnPrev" onclick="rnPrev()">
+                <div class="btn">
+                    <span class="material-symbols-outlined">
+                        arrow_back
+                    </span>
+                </div>
+            </a>
+            <a href="#" id="rnNext" onclick="rnNext()">
+                <div class="btn">
+                    <span class="material-symbols-outlined">
+                        arrow_forward
+                    </span>
+                </div>
+            </a>
+        </div>
     </div>
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
